[package]
name = "reports-filter"
version = "0.1.0"
edition = "2024"

[dependencies]
csv = "1.4.0"
clap = { version = "4", features = ["derive"] }

rand = "0.8"
regex = "1.12.3"
roxmltree = "0.20"

serde = { version = "1.0", features = ["derive"] }
serde_yml = "0.0.12"
serde_json = "1.0"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-appender = "0.2"
